--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,3 @@
 <%- include('header') -%>
-        <%= Math.random()%>
-        <%- content %>
+    <div id="root"><%- content %></div>     
 <%- include('footer') -%>
